# cpuid

./: CMakeLists.txt  README.md
src/: cpuid.c  cpuid.h  main.c
